@startuml
'https://plantuml.com/object-diagram

class Main

class Car
Car : -String make
Car : -String model
Car : -int year
Car : -String bodyStyle
Car : -driver driver
Car : +Car()
Car : +setDriver()
Car : +getDriver()


class Driver
Driver : -String name
Driver : -int age
Driver : + Driver()



Main *-- Driver
Car *-- Driver

Main *-- Car

@enduml
